--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,11 @@
 }
 
 /* MAIN  */
+a{
+  color: pink;
+  text-decoration: none;
+  font-weight: bold;
+}
 body{
   width: 100%;
   height: 100vh;
@@ -44,7 +49,7 @@ form {
   justify-content: center;
   gap: 5px;
   margin-top: 10px;
-  width: 63vw;
+  width: 60vw;
   margin-bottom: 5px;
 }
 form > input {
@@ -66,7 +71,6 @@ li {
   justify-content: space-between;
 
   list-style: none;
-  font-weight: bold;
   border-radius: 50px;
   width: 60vw;
   padding: 0 5px 0 1em;
@@ -150,7 +154,7 @@ input:last-child:hover {
   color: #fff;
 
   width: 100%;
-  height: 20em;
+  height: 25em;
 
   padding: 1em;
   display: flex;
@@ -165,4 +169,13 @@ input:last-child:hover {
 }
 .login-signin>ul>li:hover{
   background: lightgray;
+}
+.c{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.regis{
+  font-size: 10px;
+
 }
